--- a/Machine Learning Prediction Report.Rmd
+++ b/Machine Learning Prediction Report.Rmd
@@ -2,7 +2,9 @@
 title: "Machine Learning Prediction Assignment"
 author: "Kumar Shaket"
 date: "04/05/2021"
-output: pdf_document
+output:
+  html_document:
+    df_print: paged
 ---
 
 ```{r setup, include=FALSE}
